--- a/style.css
+++ b/style.css
@@ -52,13 +52,14 @@ section {
   background-color: #00b4d8;
 }
 input {
-  width: 40%;
+  width: 100%;
   height: 20px;
   margin-bottom: 5px;
   border: none;
   background-color: #caf0f8;
   display: flex;
   flex-wrap: wrap;
+  opacity: 0.6;
 }
 label {
   font-family: Arial, Helvetica, sans-serif;
