--- a/style.css
+++ b/style.css
@@ -51,6 +51,11 @@ section {
 .segundo-formulario {
   background-color: #00b4d8;
 }
+.tercer-formulario {
+  background-color: #00b4d8;
+  justify-content: center;
+  align-items: center;
+}
 input {
   width: 100%;
   height: 20px;
@@ -90,7 +95,8 @@ button {
   color: rgb(97, 96, 96);
 }
 * .primer-formulario,
-.segundo-formulario {
+.segundo-formulario,
+.tercer-formulario {
   border-radius: 25px;
   padding: 15px;
   -webkit-box-shadow: 3px 3px 31px -8px rgba(28, 101, 140, 1);
